--- a/nicolas V.2/index.html
+++ b/nicolas V.2/index.html
@@ -36,7 +36,8 @@
 
                 <P><H2>Venha experimentar a diferença na Barbearia BDY, onde cada detalhe é pensado para proporcionar o máximo de conforto e estilo para você😉. 💈✨</H2></P>
 
-
+                <img id="yuri" src="yuri podpah.jfif">
+            <if 
         </main>
         <footer>
             
