adicionei mais 1 foto

--- a/nicolas V.2/index.html
+++ b/nicolas V.2/index.html
@@ -13,8 +13,12 @@
            <h1>Barbearia BDY</h1> <P>
              <i>Na <B>Barbearia BDY</B>, oferecemos mais do que apenas um corte de cabelo ou barba. Aqui, cada visita é uma experiência única e personalizada, onde você é tratado com o máximo de cuidado e atenção. Nossa equipe de barbeiros altamente qualificados está sempre atualizada com as últimas tendências e técnicas, garantindo que você saia daqui com um visual impecável e moderno. Mas o que realmente nos diferencia é a nossa conexão com influenciadores renomados como Yuri 22, Dona, Murilinhow, Murilosoo, Shark e Tio San. Esses influenciadores são conhecidos por sua autenticidade e estilo, e eles confiam na Barbearia BDY para manter seu visual sempre em dia. A presença deles em nossas redes sociais e eventos traz um toque especial e exclusivo, mostrando que estamos na vanguarda do estilo e da moda masculina, tornando cada visita à Barbearia BDY ainda mais especial. Além disso, eles frequentemente compartilham suas experiências e transformações em suas redes sociais, ajudando a promover nossa barbearia para um público mais amplo e engajado. Então, por que cortar conosco? Porque na Barbearia BDY, você não está apenas recebendo um serviço de alta qualidade, mas também fazendo parte de uma comunidade vibrante e influente. Venha nos visitar e descubra por que somos a escolha preferida dos melhores influenciadores do Brasil. Nós também temos serviços exclusivos para nossos clientes😎.</i>
             
+
             <P><H2>Além dos cortes de cabelo e serviços de barbearia tradicionais, oferecemos uma gama de serviços exclusivos para proporcionar uma experiência única e completa:
                 </H2></P>
+
+                <img id="yuri" src="yuri.jfif">
+
                 <P><h3>Design de Barba Personalizado:</h3> Nossa equipe cria estilos de barba personalizados que complementam perfeitamente o formato do seu rosto e seu estilo pessoal.</P>
 
             <P><H3>Tratamentos Capilares: </H3>Oferecemos tratamentos capilares especializados, como hidratação, reconstrução e cuidados para prevenir queda de cabelo.</P>
