nova parte do site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <header>
+            <a Href="produtos.html"> <H2>Venha ver nossos serviços</H2></a>
+
+
 
         </header>
         <main>
@@ -48,12 +51,13 @@
                 <P><H3>Produtos Exclusivos:</H3>Disponibilizamos uma linha de produtos de alta qualidade para cuidados com cabelo e barba, selecionados cuidadosamente para atender às necessidades dos nossos clientes.
                 </P>
 
-                <P><H2>Venha experimentar a diferença na Barbearia BDY, onde cada detalhe é pensado para proporcionar o máximo de conforto e estilo para você😉. 💈✨</H2></P>
+                <P><H2>Venha experimentar a diferença na Barbearia BDY, onde cada detalhe é pensado para proporcionar o máximo de conforto e estilo para você.😉💈✨</H2></P>
 
                 <img id="yuri" src="yuri podpah.jfif"><br>
 
                 <img id="yuria" src="yuri.jfif">
 
+                <a Href="produtos.html"> <H2>Venha ver nossos serviços!😉</H2></a>
             </if>
         </main>
         <footer>
