--- a/produtos.html
+++ b/produtos.html
@@ -10,9 +10,9 @@
     <header>
 <h1>logo</h1>
      <nav>  <ul>
-                <li>Home</li>
-                <li>Produtos</li>
-                <li>Contato</li>
+                <li> <a href="index.html">Home</a></li>
+                <li> <a href="produtos.html">Produtos</a></li>  </li>
+                <li> <a href="####">Contato</a>  </li>
             </ul>
     </nav>
     </header>
