--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         <header>
             
 
-
         </header>
         <main>
            <h1>Barbearia BDY</h1> <P>
@@ -56,7 +55,7 @@
 
                 <img id="yuria" src="yuri.jfif">
 
-                <a Href="produtos.html"> <H2>Venha ver nossos serviços!😉</H2></a>
+                <a Href="produtos.html"> <H2>Venha ver nossos serviços completos!😉</H2></a>
             </if>
         </main>
         <footer>
