--- a/produtos.html
+++ b/produtos.html
@@ -4,17 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Nossos serviços</title>
+    <link rel="stylesheet" href="reset.css"> 
     <link rel="stylesheet" href="produtos.css">
 </head>
 <body>
     <header>
-<h1>logo</h1>
-     <nav>  <ul>
+    <div class="caixa">
+        <h1><img id="logo" src="logo bdy.png"></h1>
+        <nav>  
+            <ul>
                 <li> <a href="index.html">Home</a></li>
-                <li> <a href="produtos.html">Produtos</a></li>  </li>
+                <li> <a href="produtos.html">Produtos</a></li>
                 <li> <a href="####">Contato</a>  </li>
             </ul>
-    </nav>
+         </nav>
+        </div>
     </header>
 </body>
 </html>
