--- a/produtos.html
+++ b/produtos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Nossos serviços</title>
     <link rel="stylesheet" href="reset.css"> 
-    <link rel="stylesheet" href="produtos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
             <ul>
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="produtos.html">Produtos</a></li>
-                <li> <a href="####">Contato</a>  </li>
+                <li> <a href="contatos.html">Contato</a>  </li>
             </ul>
          </nav>
         </div>
@@ -44,5 +44,9 @@
                 </li>
             </ul>
         </main>
+        <footer>
+            <img src="logo bdy.png">
+            <p  class="copyright"> &copy; Copiright Nicolas A.Pereira - 2025 </p>
+        </footer>
 </body>
 </html>
