--- a/contatos.html
+++ b/contatos.html
@@ -20,6 +20,22 @@
          </nav>
         </div>
     </header>
+
+    <main>
+        <form>
+            <label for="nomesobrenome">Nome e Sobrenome</label>
+            <input type="text" id="nomesobrenome">
+
+            <label for="email">Email</label>
+            <input type="text" id="Email">
+
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone">
+
+            <input type="submit" value="Enviar formulário">
+        </form>
+    </main>
+
     <footer>
         <img src="logo bdy.png">
         <p  class="copyright"> &copy; Copiright Nicolas A.Pereira - 2025 </p>
