--- a/contatos.html
+++ b/contatos.html
@@ -15,7 +15,7 @@
             <ul>
                 <li> <a href="index.html">Home</a></li>
                 <li> <a href="produtos.html">Produtos</a></li>
-                <li> <a href="contatos.html">Contato</a>  </li>
+                <li> <a href="contatos.html">Contatos</a>  </li>
             </ul>
          </nav>
         </div>
@@ -23,13 +23,13 @@
 
     <main>
         <form>
-            <label for="nomesobrenome">Nome e Sobrenome</label>
+            <label for="nomesobrenome">Nome e Sobrenome:</label>
             <input type="text" id="nomesobrenome">
 
-            <label for="email">Email</label>
+            <label for="email">Email:</label>
             <input type="text" id="Email">
 
-            <label for="telefone">Telefone</label>
+            <label for="telefone">Telefone:</label>
             <input type="text" id="telefone">
 
             <input type="submit" value="Enviar formulário"> 
