--- a/contatos.html
+++ b/contatos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Nossos serviços</title>
+    <title>Contatos BDY</title>
     <link rel="stylesheet" href="reset.css"> 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -24,15 +24,48 @@
     <main>
         <form>
             <label for="nomesobrenome">Nome e Sobrenome:</label>
-            <input type="text" id="nomesobrenome">
+            <input type="text" id="nomesobrenome" class="input-padrao">
 
             <label for="email">Email:</label>
-            <input type="text" id="Email">
+            <input type="text" id="Email" class="input-padrao">
 
             <label for="telefone">Telefone:</label>
-            <input type="text" id="telefone">
+            <input type="text" id="telefone" class="input-padrao">
 
-            <input type="submit" value="Enviar formulário"> 
+            <label for="mensagem"> mensagem</label>
+            <textarea cols="70" rows="10" id="mensagem" class="input-padrao"></textarea>
+
+            <div>
+                <p><i><h2>Como prefere nosso contato?</h2></i></p>
+                <label for="radio-email">
+                    <input type="radio" name="contato" value="email" id="radio-email">
+                    Email
+                </label>
+
+                <label for="radio-telefone">
+                    <input type="radio" name="contato" value="telefone" id="radio-telefone">
+                    telefone
+                </label>
+
+                <label for="radio-whatsapp">
+                    <input type="radio" name="contato" value="whatsapp" id="radio-whatsapp">
+                    whatsapp
+                </label>
+            </div>
+
+            <div>
+                <p>Qual o horário prefere ser atendido?</p>
+                <select>
+                    <option>manhã</option>
+                    <option>tarde</option>
+                    <option>noite</option>
+                </select>
+            </div>
+            <label class="checkblock">
+            <input type="checkbox">
+            Gostaria de receber nossas novidades por email?
+        </label>
+            <input type="submit" value="Enviar formulário" > 
         </form>
     </main>
 
