--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>Barbearia BDY</title>
-        <link rel="stylesheet" href="style-home.css">
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
@@ -54,6 +55,13 @@
 
                 <img id="yuria" src="yuri.jfif">
 
+                <div class="mapa">
+                    <h3 class="titulo-principal"> Nosso estabelecimento:</h3>
+                    <p> Nosso estabeleciomento está localizado no endereço abaixo</p>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3100.8794079636973!2d-46.816350143137655!3d-22.444533218544017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c90212b4d59093%3A0xc125ff87683d3777!2sPosto%20Ipiranga!5e0!3m2!1spt-BR!2sbr!4v1745840186226!5m2!1spt-BR!2sbr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="video"> <iframe width="560" height="315" src="https://www.youtube.com/embed/LBDio38-FaQ?si=tMmn-zgj_BTOkBIt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
                 <a Href="produtos.html"> <H2>Venha ver nossos serviços completos!😉</H2></a>
             </if>
         </main>
