--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
 <body>
     <header>
     <div class="caixa">
-        <h1><img id="logo" src="logo bdy.png"></h1>
+        <img id="logo" src="logo bdy.png">
         <nav>  
             <ul>
                 <li> <a href="index.html">Home</a></li>
